<resources>
    <string name="app_name">Attack Feed</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_contribute">Contribute</string>
    <string name="menu_practice">ContactUs</string>
    <string name="menu_stetson">Stetson</string>
    <string name="menu_attackfeed">Attack Feed</string>
    <string name="call_us">Call Us</string>
    <string name="e_mail_us">E-Mail Us</string>
    <string name="linkedin">LinkedIn</string>
    <string name="twitter">Twitter</string>
    <string name="from">From</string>
</resources>